5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1764_1576.log
== TEST (2019-05-21 17:34:07) 
-- CODE:
e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

while (e[0] == b[0]):
	print("EMPATE")
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    e= array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:35:11) 
-- CODE:
from numpy import*

e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

while (e[0] == b[0]):
	print("EMPATE")
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:35:25) 
-- CODE:
from numpy import*

e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

while (e[0] == b[0]):
	print("EMPATE")
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:35:58) 
-- CODE:
from numpy import*

e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

while (e[0] == b[0]):
	print("EMPATE")
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:37:17) 
-- CODE:
from numpy import*

e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

while ((e[0] == b[0]) or (e[1] == b[1]) or (e[2] == b[2])):
	print("EMPATE")
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:41:44) 
-- CODE:
from numpy import*

e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

while ((e[0] == b[0]) or (e[1] == b[1]) or (e[2] == b[2])):
	print("EMPATE")
	
	if ((e[0] < b[0]) or (e[1] < b[1]) or (e[2] < b[2])):
		print("BARSANULFO")
		
	elif ((e[0] > b[0]) or (e[1] > b[1]) or (e[2] > b[2])):
		print("EUSAPIA")
		
else:
	print(size(e))
	
		
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:42:56) 
-- CODE:
from numpy import*

e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

while ((e[0] == b[0]) or (e[1] == b[1]) or (e[2] == b[2])):
	print("EMPATE")
	
	if ((e[0] < b[0]) or (e[1] < b[1]) or (e[2] < b[2])):
		print("BARSANULFO")
		
	elif ((e[0] > b[0]) or (e[1] > b[1]) or (e[2] > b[2])):
		print("EUSAPIA")
		
else:
	print(size(e))
	
		
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:43:37) 
-- CODE:
from numpy import*

e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

while ((e[0] == b[0]) or (e[1] == b[1]) or (e[2] == b[2])):
	print("EMPATE")
	
	if ((e[0] < b[0]) or (e[1] < b[1]) or (e[2] < b[2])):
		print("BARSANULFO")
		
	elif ((e[0] > b[0]) or (e[1] > b[1]) or (e[2] > b[2])):
		print("EUSAPIA")
		
print(size(e))
	
		
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:44:11) 
-- CODE:
from numpy import*

e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

while ((e[0] == b[0]) or (e[1] == b[1]) or (e[2] == b[2])):
	print("EMPATE")
	
	if ((e[0] < b[0]) or (e[1] < b[1]) or (e[2] < b[2])):
		print("BARSANULFO")
		
	elif ((e[0] > b[0]) or (e[1] > b[1]) or (e[2] > b[2])):
		print("EUSAPIA")
		
print(size(e))
	
		
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:47:54) 
-- CODE:
from numpy import*

e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

print(size(e))

while ((e[0] == b[0]) or (e[1] == b[1]) or (e[2] == b[2])):
	e = e
	b = b
	print("EMPATE")
	
	if ((e[0] < b[0]) or (e[1] < b[1]) or (e[2] < b[2])):
		e = e - 1
		b += 1
		print("BARSANULFO")
		
	elif ((e[0] > b[0]) or (e[1] > b[1]) or (e[2] > b[2])):
		e += 1
		b = b -1
		print("EUSAPIA")
			
		
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:48:25) 
-- CODE:
from numpy import*

e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

print(size(e))

while ((e[0] == b[0]) or (e[1] == b[1]) or (e[2] == b[2])):
	e = e
	b = b
	print("EMPATE")
	
	if ((e[0] < b[0]) or (e[1] < b[1]) or (e[2] < b[2])):
		e = e - 1
		b += 1
		print("BARSANULFO")
		
	elif ((e[0] > b[0]) or (e[1] > b[1]) or (e[2] > b[2])):
		e += 1
		b = b -1
		print("EUSAPIA")
			
		
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:52:05) 
-- CODE:
from numpy import*

e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

while ((e[0] == b[0]) or (e[1] == b[1]) or (e[2] == b[2])):
	print("EMPATE")
	
	if ((e[0] < b[0]) or (e[1] < b[1]) or (e[2] < b[2])):
		print("BARSANULFO")
		
	elif ((e[0] > b[0]) or (e[1] > b[1]) or (e[2] > b[2])):
		print("EUSAPIA")
		
print(size(e))
	
		
		
	
	



-- EXECUTION TIME:
0.915415
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BARSANULFO
EMPATE
BAR
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:40:57) 
-- CODE:
from numpy import*

e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

print(size(e))

while ((e[0] == b[0]) or (e[1] == b[1]) or (e[2] == b[2])):
	e = e
	b = b
	print("EMPATE")
	
	if ((e[0] < b[0]) or (e[1] < b[1]) or (e[2] < b[2])):
		e = e - 1
		b += 1
		print("BARSANULFO")
		
	elif ((e[0] > b[0]) or (e[1] > b[1]) or (e[2] > b[2])):
		e += 1
		b = b -1
		print("EUSAPIA")
			
		
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:41:02) 
-- CODE:
from numpy import*

e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

print(size(e))

while ((e[0] == b[0]) or (e[1] == b[1]) or (e[2] == b[2])):
	e = e
	b = b
	print("EMPATE")
	
	if ((e[0] < b[0]) or (e[1] < b[1]) or (e[2] < b[2])):
		e = e - 1
		b += 1
		print("BARSANULFO")
		
	elif ((e[0] > b[0]) or (e[1] > b[1]) or (e[2] > b[2])):
		e += 1
		b = b -1
		print("EUSAPIA")
			
		
		
	
	



-- EXECUTION TIME:
0.414559
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
BARSANULFO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:41:17) 
-- CODE:
from numpy import*

e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

print(size(e))

while ((e[0] == b[0]) or (e[1] == b[1]) or (e[2] == b[2])):
	e = e
	b = b
	print("EMPATE")
	
	if ((e[0] < b[0]) or (e[1] < b[1]) or (e[2] < b[2])):
		e = e - 1
		b += 1
		print("BARSANULFO")
		
	elif ((e[0] > b[0]) or (e[1] > b[1]) or (e[2] > b[2])):
		e += 1
		b = b -1
		print("EUSAPIA")
			
		
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:41:46) 
-- CODE:
from numpy import*

e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

print(size(e))

while ((e[0] == b[0]) or (e[1] == b[1]) or (e[2] == b[2])):
	e = e
	b = b
	print("EMPATE")
	
	if ((e[0] < b[0]) or (e[1] < b[1]) or (e[2] < b[2])):
		e = e - 1
		b += 1
		print("BARSANULFO")
		
	elif ((e[0] > b[0]) or (e[1] > b[1]) or (e[2] > b[2])):
		e += 1
		b = b -1
		print("EUSAPIA")
			
		
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:45:23) 
-- CODE:
from numpy import*

e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

print(size(e))

while ((e[0] == b[0]) or (e[1] == b[1]) or (e[2] == b[2])):
	e = e
	b = b
	print("EMPATE")
	
	if ((e[0] <= b[0]) or (e[1] <= b[1]) or (e[2] <= b[2])):
		e = e - 1
		b += 1
		print("BARSANULFO")
		
	elif ((e[0] > b[0]) or (e[1] > b[1]) or (e[2] > b[2])):
		e += 1
		b = b -1
		print("EUSAPIA")
			
		
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:47:02) 
-- CODE:
from numpy import*

e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

print(size(e))

while ((e[0] == b[0]) or (e[1] == b[1]) or (e[2] == b[2])):
	e = e
	b = b
	print("EMPATE")
	
	if ((e[0] < b[0]) or (e[1] < b[1]) or (e[2] < b[2])):
		e = e - 1
		b = b
		print("BARSANULFO")
		
	elif ((e[0] > b[0]) or (e[1] > b[1]) or (e[2] > b[2])):
		e += 1
		b = b
		print("EUSAPIA")
			
		
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:48:17) 
-- CODE:
from numpy import*

e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

print(size(e))

while ((e[0] == b[0]) or (e[1] == b[1]) or (e[2] == b[2])):
	e = e
	b = b
	print("EMPATE")
	
	if ((e[0] < b[0]) or (e[1] < b[1]) or (e[2] < b[2])):
		e = e - 1
		b = b

		
	elif ((e[0] > b[0]) or (e[1] > b[1]) or (e[2] > b[2])):
		e += 1
		b = b
		print("EUSAPIA")
		
else:
	print("BARSANULFO")
			
		
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:48:58) 
-- CODE:
from numpy import*

e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

print(size(e))

while ((e[0] == b[0]) or (e[1] == b[1]) or (e[2] == b[2])):
	e = e
	b = b
	print("EMPATE")
	
	if ((e[0] < b[0]) or (e[1] < b[1]) or (e[2] < b[2])):
		e = e - 1
		b = b

		
	elif ((e[0] > b[0]) or (e[1] > b[1]) or (e[2] > b[2])):
		e += 1
		b = b
		print("EUSAPIA")
		
else:
	print("BARSANULFO")
			
		
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:49:25) 
-- CODE:
from numpy import*

e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

print(size(e))

while ((e[0] == b[0]) or (e[1] == b[1]) or (e[2] == b[2])):
	e = e
	b = b
	print("EMPATE")
	
	if ((e[0] < b[0]) or (e[1] < b[1]) or (e[2] < b[2])):
		e = e - 1
		b = b

		
	elif ((e[0] > b[0]) or (e[1] > b[1]) or (e[2] > b[2])):
		e += 1
		b = b
		print("EUSAPIA")
		
else:
	print("BARSANULFO")
			
		
		
	
	



-- EXECUTION TIME:
0.536867
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
BARSANULFO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:49:30) 
-- CODE:
from numpy import*

e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

print(size(e))

while ((e[0] == b[0]) or (e[1] == b[1]) or (e[2] == b[2])):
	e = e
	b = b
	print("EMPATE")
	
	if ((e[0] < b[0]) or (e[1] < b[1]) or (e[2] < b[2])):
		e = e - 1
		b = b

		
	elif ((e[0] > b[0]) or (e[1] > b[1]) or (e[2] > b[2])):
		e += 1
		b = b
		print("EUSAPIA")
		
else:
	print("BARSANULFO")
			
		
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:52:27) 
-- CODE:
from numpy import*

e= array(eval(input("Jogadas de Eusapia: ")))
b= array(eval(input("Jogadas de Barsanulfo: ")))

print(size(e))

while ((e[0] == b[0]) or (e[1] == b[1]) or (e[2] == b[2])):
	e = e
	b = b
	print("EMPATE")
	
	if ((e[0] < b[0]) or (e[1] < b[1]) or (e[2] < b[2])):
		e = e - 1
		b = b
		print("BARSANULFO")

		
	elif ((e[0] > b[0]) or (e[1] > b[1]) or (e[2] > b[2])):
		e += 1
		b = b
		print("EUSAPIA")
		
			
		
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:06:17) 
-- CODE:
from numpy import*
Eusapia = array(
Barsanulfo = array(

posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")
	



-- ERROR:
File "XXXX", line 6
    vitoriaEU = 0
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:14:57) 
-- CODE:
from numpy import*
Eusapia = array(eval(input('Jogadas de E: '))
Barsanulfo = array(eval(input('Jogadas de B: '))

posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")
	



-- ERROR:
File "XXXX", line 3
    Barsanulfo = array(eval(input())
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:15:13) 
-- CODE:
from numpy import*

Eusapia = array(eval(input('Jogadas de E: '))
Barsanulfo = array(eval(input('Jogadas de B: '))

posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")
	



-- ERROR:
File "XXXX", line 4
    Barsanulfo = array(eval(input())
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:16:09) 
-- CODE:
from numpy import*

Eusapia = array(eval(input('Jogadas de E: ')))
Barsanulfo = array(eval(input('Jogadas de B: ')))

posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:16:12) 
-- CODE:
from numpy import*

Eusapia = array(eval(input('Jogadas de E: ')))
Barsanulfo = array(eval(input('Jogadas de B: ')))

posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")
	



-- EXECUTION TIME:
0.595977
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
